--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -6,7 +6,7 @@
       rgba(255, 255, 255, 0.19) 52.74%,
       rgba(255, 255, 255, 0) 74.46%
     ),
-    url(/genius-homework-4/img/hero-section-background.png);
+    url(../genius-homework-4/img/hero-section-background.png);
   background-repeat: no-repeat;
   background-size: cover;
   flex-shrink: 0;
@@ -22,7 +22,7 @@
         rgba(255, 255, 255, 0.2) 50.39%,
         rgba(255, 255, 255, 0) 68.37%
       ),
-      url(/genius-homework-4/img/header-background-mobile.png);
+      url(../genius-homework-4/img/header-background-mobile.png);
     padding-bottom: 56px;
   }
 
